Fix z-indexing in Safari, move backdrop to partials

--- a/app/assets/stylesheets/editor/_backdrop.scss
+++ b/app/assets/stylesheets/editor/_backdrop.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   background: #000;
-  z-index: 997;
+  z-index: -1;
   opacity: 0;
   display: none;
 
